2007-11-29  Neal H. Walfield  <neal@gnu.org>

	* activity.h: Include <hurd/addr.h>.
	Add method id RM_activity_properties.
	(ACTIVITY_PROPERTIES_PRIORITY_SET): Define.
	(ACTIVITY_PROPERTIES_WEIGHT_SET): Likewise.
	(ACTIVITY_PROPERTIES_STORAGE_QUOTA_SET): Likewise.
	(ACTIVITY_PROPERTIES_ALL_SET): Likewise.
	(activity_properties): New declaration.
	* rpc.h (RPC53): New macro.

2007-11-28  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (includehurd_HEADERS): Add activity.h.
	* headers.m4: Create link from ../include/hurd/activity.h to
	activity.h.
	* activity.h: New file.

2007-11-28  Neal H. Walfield  <neal@gnu.org>

	* cap.h (cap_types_compatible): New function.

2007-11-23  Neal H. Walfield  <neal@gnu.org>

	* thread.h: Include <hurd/addr-trans.h>.
	(HURD_EXREGS_EXCEPTION_THREAD): New definition.
	(trans_exregs): Take two additional arguments for determining how
	to copy the aspace address translation bits.  Update callers.
	(thread_stop): New function.
	* rpc.h (RPC12_4): New macro.
	(RPC13_4): Likewise.

	* exceptions.h (exception_handler_init): New declaration.
	(exception_handler_loop): Likewise.

2007-11-22  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (includehurd_HEADERS): Add thread.h.
	* headers.m4: Link $(BUILDIR)/include/hurd/thread.h to thread.h.
	* thread.h: New file.
	* rpc.h: Include <errno.h>.

2007-11-22  Neal H. Walfield  <neal@gnu.org>

	* cap.h (cap_copy_x): Use CAP_COPY_COPY_ADDR_TRANS_GUARD, not
	CAP_COPY_COPY_GUARD.  Use CAP_COPY_COPY_ADDR_TRANS_SUBPAGE, not
	Use CAP_COPY_COPY_SUBPAGE.  Support CAP_COPY_COPY_SOURCE_GUARD.

2007-11-22  Neal H. Walfield  <neal@gnu.org>

	* rpc.h (RPC_UNMARSHAL): Only assert that IDX is equal to the
	number of untyped words if the error code is 0.

	(RPC63): New macro.
	(RPC74): Likewise.
	(RPC11_4): Likewise.

2007-11-19  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (includehurd_HEADERS): Add exceptions.h.
	* headers.m4: Link $(BUILDIR)/include/hurd/exceptions.h to
	exceptions.h.