@@ -1,5 +1,12 @@
 2007-11-29  Neal H. Walfield  <neal@gnu.org>
 
+	* rpc.h (RPC_MARSHAL): Rename from this...
+	(RPC_SEND_MARSHAL): ... to this.  Update users.
+	(RPC_UNMARSHAL): Rename from this...
+	(RPC_REPLY_UNMARSHAL): ... to this.  Update users.
+
+2007-11-29  Neal H. Walfield  <neal@gnu.org>
+
 	* activity.h: Include <hurd/addr.h>.
 	Add method id RM_activity_properties.
 	(ACTIVITY_PROPERTIES_PRIORITY_SET): Define.
